syntax = "proto3";

package grpcdomain;


// Identity represents a domain
message Identity {
	// UUID is a Unique Identifier for the domain
	string UUID = 1;
	// Version is the version of code being run by the domain
	string Version = 2;
	// Services is the list of services an Identity currently offers
	repeated ServiceIdentity Services = 3;

	// LastContact is the time of the last heard communication (UnixNano)
	int64 LastContact = 4;

	// IP is the IP address which the domain was last known to communicate over
	bytes IP = 5;
	// Port is the port which the domain was last known to belong communicate over
	int32 Port = 6;
}

// Service represents a service running under a domain
message ServiceIdentity {
	// Name is the name of the service
	string Name = 1;
	// Port is the port which the service is availible at
	int32 Port = 2;
	// LastContact is the time of the last heard communication (UnixNano)
	int64 LastContact = 3;
}
